[EDIT] Fix éléments swagger
